--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+.container-input{
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  outline: none;
+}
+table {
+  
+  text-align: center;
+  border: solid 1px;
+  border-collapse: collapse;
+  
+}
+td, tr, th {
+  border: solid 1px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+td, th{
+  padding: 8px 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-table {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quantity-input{
+  margin-bottom: 10px;
 }
